--- a/utility-bridge.yaml
+++ b/utility-bridge.yaml
@@ -29,6 +29,7 @@ api:
             zehnder_fan->setSpeed(run_speed, run_time);
 
 ota:
+  platform: esphome
   password: !secret esphome_utility_bridge_ota_password
 
 wifi:
@@ -77,7 +78,8 @@ button:
 # Load external components
 # https://esphome.io/components/external_components.html#external-components-git
 external_components:
-  - source: github://Sanderhuisman/ESPHome-Zehnder-RF
+# - source: github://Sanderhuisman/ESPHome-Zehnder-RF
+  - source: github://JGeeforce/ESPHome-Zehnder-RF
 
 # SPI
 spi:
@@ -94,8 +96,8 @@ nrf905:
   pwr_pin: GPIO26
   txen_pin: GPIO25
   # We don't need AM and DR at the moment as they are read from the inernal registers
-  # am_pin: GPIO32
-  # dr_pin: GPIO35
+  #am_pin: GPIO32
+  #dr_pin: GPIO35
 
 # The FAN controller
 fan:
